--- a/CustomerPortal/Views/Login/Index.cshtml
+++ b/CustomerPortal/Views/Login/Index.cshtml
@@ -1,27 +1,37 @@
 ﻿@{
-   // ViewData["Title"] = "Login Page";
+   ViewData["Title"] = "Login Page";
+   ViewData["HideNav"] = true;
 
 }
 
 <div class="d-flex text-center justify-content-center align-items-center">
-    <div class="card shadow p-4" style="width: 500px;">
-        <h4 class="display-4">Login</h4>
-        <form asp-controller="Login" asp-action="HandleLogin" method="post">
-            <div class="form-group">
-                <label for="LoginId">Login ID</label>
-                <!-- need asp-for for inputs -->
-                <input width="30px" type="text" class="form-control" id="LoginId" name="LoginId" required />
-            </div>
+    <div class="card p-5 mt-5" style="width: 90%;">
+        <h2 class="mb-3 text-center">Welcome to MCBA</h2>
+        <span class="text-center text-muted mb-2">Most Common Bank Australia</span>
+        <p class="text-center text-muted mb-5">Please login with your registered account details</p>
+        
+        <div class="d-flex justify-content-center">
+            <div class="card shadow p-4" style="width: 500px;">
+                <h2 class="mb-2 text-center">Login</h2>
+                <form asp-controller="Login" asp-action="HandleLogin" method="post">
+                    <div class="form-group">
+                        <label for="LoginId">Login ID</label>
+                        <!-- need asp-for for inputs -->
+                        <input width="30px" type="text" class="form-control" id="LoginId" name="LoginId" required/>
+                    </div>
 
-            <div class="form-group">
-                <label for="Password">Password</label>
-                <input type="password" class="form-control" id="Password" name="Password"  required />
+                    <div class="form-group">
+                        <label for="Password">Password</label>
+                        <input type="password" class="form-control" id="Password" name="Password" required/>
+                    </div>
+                    <div class="d-grid justify-content-center align-items-center" style="width: 100%; margin-top: 20px;">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
+
+                </form>
             </div>
-            <div class="d-grid justify-content-center align-items-center" style="width: 100%; margin-top: 20px;">
-                <button type="submit" class="btn btn-primary">Login</button>
-            </div>
-            
-        </form>
+        </div>
+        
     </div>
     
 </div>
