--- a/CustomerPortal/Views/Login/Index.cshtml
+++ b/CustomerPortal/Views/Login/Index.cshtml
@@ -1,28 +1,30 @@
-﻿@{
+﻿@model CustomerPortal.ViewModel.LoginViewModel
+@{
    ViewData["Title"] = "Login Page";
    ViewData["HideNav"] = true;
 
 }
 
 <div class="d-flex text-center justify-content-center align-items-center">
+    
     <div class="card p-5 mt-5" style="width: 90%;">
         <h2 class="mb-3 text-center">Welcome to MCBA</h2>
         <span class="text-center text-muted mb-2">Most Common Bank Australia</span>
         <p class="text-center text-muted mb-5">Please login with your registered account details</p>
-        
+
         <div class="d-flex justify-content-center">
             <div class="card shadow p-4" style="width: 500px;">
                 <h2 class="mb-2 text-center">Login</h2>
                 <form asp-controller="Login" asp-action="HandleLogin" method="post">
                     <div class="form-group">
-                        <label for="LoginId">Login ID</label>
+                        <label asp-for="LoginID">Login ID</label>
                         <!-- need asp-for for inputs -->
-                        <input width="30px" type="text" class="form-control" id="LoginId" name="LoginId" required/>
+                        <input width="30px" type="text" class="form-control" asp-for="LoginID" required/>
                     </div>
 
                     <div class="form-group">
-                        <label for="Password">Password</label>
-                        <input type="password" class="form-control" id="Password" name="Password" required/>
+                        <label asp-for="Password">Password</label>
+                        <input type="password" class="form-control" asp-for="Password" required/>
                     </div>
                     <div class="d-grid justify-content-center align-items-center" style="width: 100%; margin-top: 20px;">
                         <button type="submit" class="btn btn-primary">Login</button>
@@ -31,7 +33,11 @@
                 </form>
             </div>
         </div>
-        
+
     </div>
-    
 </div>
+    
+    
+    
+
+    
