list customer accounts

--- a/CustomerPortal/Views/Home/Index.cshtml
+++ b/CustomerPortal/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    @model List<CustomerPortal.ViewModel.HomeViewModel>
 }
 
 <div class="text-center">
-    <h1 class="display-4">MCBA Internet banking</h1>
+    <h5 class="display-4">Welcome to MCBA Internet banking</h5>
     <div class="container mt-4">
         <h2 class="mb-4">Your Accounts</h2>
         <table class="table table-bordered table-striped shadow-sm">
