--- a/CustomerPortal/Views/Home/Index.cshtml
+++ b/CustomerPortal/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                 <tr>
                     <td>@account.AccountNumber</td>
                     <td>@account.AccountType</td>
-                    <td>$@account.Balance</td>
+                    <td>$@account.Balance.ToString("0.00")</td>
                 </tr>
             }
             </tbody>
