--- a/CustomerPortal/Views/Shared/_Layout.cshtml
+++ b/CustomerPortal/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Withdraw" asp-action="Index">Withdraw</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Transfer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transfer" asp-action="Index">Transfer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">My Statement</a>
