--- a/CustomerPortal/Views/Withdraw/Index.cshtml
+++ b/CustomerPortal/Views/Withdraw/Index.cshtml
@@ -22,7 +22,7 @@
             <div class="form-group mb-3">
                <label asp-for="AccountNumber">Account</label>
                <select asp-for="AccountNumber" class="form-select" required>
-                  <option value="">-- Select account --</option>
+                  <option value="">Select account</option>
                   @if (Model.Accounts != null && Model.Accounts.Any())
                   {
                      @foreach (var acc in Model.Accounts)
