--- a/CustomerPortal/Views/Withdraw/Index.cshtml
+++ b/CustomerPortal/Views/Withdraw/Index.cshtml
@@ -41,7 +41,7 @@
 
             <div class="form-group mb-3">
                <label asp-for="Amount">Amount</label>
-               <input asp-for="Amount" type="number"  min="1" class="form-control" required />
+               <input asp-for="Amount" type="number" value="" min="1" class="form-control" required />
             </div>
             <div class="form-group mb-3">
                <label asp-for="Amount">Comment (Optional)</label>
