--- a/CustomerPortal/Views/Shared/_Layout.cshtml
+++ b/CustomerPortal/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">My Statement</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">My Profile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">My Profile</a>
                         </li>
                     </ul>
                 </div>
