Bill pay initials

--- a/CustomerPortal/Views/Shared/_Layout.cshtml
+++ b/CustomerPortal/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">My Profile</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BillPay" asp-action="Index">Bill Pay</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="HandleLogout">Logout</a>
                         </li>
                     </ul>
