--- a/CustomerPortal/Views/BillPay/CreateView.cshtml
+++ b/CustomerPortal/Views/BillPay/CreateView.cshtml
@@ -12,14 +12,7 @@
    <div class="justify-content-center mb-5">
       <div class="p-4 justify-content-center" style="width: 400px;">
          <div asp-validation-summary="All" class="text-danger"></div>
-
-         @* @if (!string.IsNullOrEmpty(Model.Message)) *@
-         @* { *@
-         @*    <div class="alert @(Model.IsSuccess ? "alert-success" : "alert-danger") text-center"> *@
-         @*       @Model.Message *@
-         @*    </div> *@
-         @* } *@
-        
+         
          <form asp-action="Create" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -28,7 +21,6 @@
                <select asp-for="AccountNumber" class="form-control" asp-items="Model.Accounts">
                   <option value="" selected disabled>Select account</option>
                </select>
-               <span asp-validation-for="AccountNumber" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
@@ -47,19 +39,16 @@
                      <option disabled>No payees available</option>
                   }
                </select>
-               <span asp-validation-for="PayeeID" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
                <label class="form-label">Amount</label>
-               <input asp-for="Amount" type="number" value="" class="form-control" />
-               <span asp-validation-for="Amount" class="text-danger"></span>
+               <input asp-for="Amount" type="number" value="" class="form-control" required />
             </div>
 
             <div class="mb-3">
                <label class="form-label">Schedule Time</label>
                <input asp-for="ScheduleTimeUtc" type="datetime-local" class="form-control" value="@Model.ScheduleTimeUtc.ToString("yyyy-MM-ddTHH:mm")" />
-               <span asp-validation-for="ScheduleTimeUtc" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
