--- a/AdminPortal/Views/Home/Index.cshtml
+++ b/AdminPortal/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Admin</h1>
-    <p></p>
+    <h6 class="text-center text-muted mb-2">Use Navigations visit pages and perform admin actions</h6>
 </div>
