--- a/AdminPortal/Views/Login/Index.cshtml
+++ b/AdminPortal/Views/Login/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="d-flex text-center justify-content-center align-items-center">
     
     <div class="card p-5 mt-5" style="width: 90%;">
-        <h2 class="mb-3 text-center">Welcome Admin</h2>
+        <h2 class="mb-3 text-center">Admin Login</h2>
         <span class="text-center text-muted mb-2">Admin Portal - MCBA</span>
 
         <div class="d-flex justify-content-center">
