add sessions for admin portal

--- a/AdminPortal/Views/Login/Index.cshtml
+++ b/AdminPortal/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-@model AdminPortal.ViewModels.LoginViewModel
+@model AdminPortal.ViewModels.AdminLoginViewModel
 @{
     ViewData["Title"] = "Admin Login Page";
     ViewData["HideNav"] = true;
