--- a/AdminPortal/Views/Login/Index.cshtml
+++ b/AdminPortal/Views/Login/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="d-flex justify-content-center">
             <div class="card shadow p-4" style="width: 500px;">
                 <h2 class="mb-2 text-center">Login</h2>
-                <form asp-controller="Login" asp-action="HandleLogin" method="post">
+                <form asp-controller="Login" asp-action="HandleAdminLogin" method="post">
                     <div class="form-group">
                         <label asp-for="LoginID">Login ID</label>
                         <!-- need asp-for for inputs -->
