--- a/AdminPortal/Views/Shared/_Layout.cshtml
+++ b/AdminPortal/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Payee" asp-action="Index">Payee</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BillPay" asp-action="Index">BillPay</a>
+                        </li>
                     </ul>
                 </div>
             </div>
