--- a/AdminPortal/Views/BillPay/Index.cshtml
+++ b/AdminPortal/Views/BillPay/Index.cshtml
@@ -24,7 +24,7 @@
 
 <div class="text-center justify-content-center align-items-center d-flex flex-column">
     <h3 class="mb-3 text-center">BillPay</h3>
-    <h6 class="text-center text-muted mb-2">Display and control scheduled bills. Admin can block/unblock any item.</h6>
+    <h6 class="text-center text-muted mb-2">Display and control scheduled bills.</h6>
 
     @if (TempData["SuccessMessage"] != null)
     {
